fix: config title field text color is not white in dark mode

--- a/src/components/GoalsComponents/GoalConfigModal/ConfigGoal.scss
+++ b/src/components/GoalsComponents/GoalConfigModal/ConfigGoal.scss
@@ -1,7 +1,10 @@
 .configModal {
   width: 400px;
+  input {
+    color: inherit;
+  }
   p {
-      margin: 0;
+    margin: 0;
   }
   .ant-modal-content {
     padding: 0 0 24px 0 !important;
